syntax="proto3";
package task1;
option go_package="task1/protofile";
import "google/protobuf/empty.proto";
message Blog{
    string id=1;
    string author_id=2;
    string title=3;
    string content=4;
}
message BlogId{
    string id=1;
}
service BlogService{
    rpc CreateBlog(Blog)returns (BlogId);
    rpc ReadBlog(BlogId) returns(Blog);
    rpc UpdateBlog(Blog)returns(google.protobuf.Empty);
    rpc DeleteBlog(BlogId)returns(google.protobuf.Empty);
    rpc ListBlogs(google.protobuf.Empty)returns(stream Blog);

}